project(ubjsonCpp)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST_TEST)
file(GLOB HEADER_FILES_LIB "include/*.hpp")
file(GLOB HEADER_FILES_TEST ${HEADER_FILES_LIB} "tests/test_utils/*.hpp")
aux_source_directory(tests/value_test/ SRC_LIST_TEST)
#set(CMAKE_CXX_COMPILER "/usr/bin/g++-5")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++14 -Wall -Wextra -Werror -g")
add_subdirectory(include)
include_directories(include)
add_subdirectory(tests)
add_subdirectory(src)
add_executable(${PROJECT_NAME} ${SRC_LIST_TEST})
target_link_libraries(${PROJECT_NAME} UbexCpp_test_lib)
target_link_libraries(${PROJECT_NAME} UbjsonCpp)
target_link_libraries(${PROJECT_NAME} cppunit)
